--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "App to save video ideas for content developers",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "author": "S.L.Mupfukudzwa",
   "license": "MIT",
